# PeakFinding

./: .gitignore  ChipIr.sh  LICENSE.txt  PoissonDist.py  Poisson_sqrt.py  README.md  anomaly_detection.py  decision_explanation.py  kernel_calculator.py  markov_chain.py  merge_IEC.py  merge_Spe.py  peak_lister.py  peakiness_manipulation.py  plot_ChipIr.py  poisson_distribution.py  pyproject.toml  save_Spe.py  spectrum.py  sqrt_repr.py
example_file/: 01_Cu.Spe  01_Cu.txt  01_Cu_001.Spe  01_Cu_001.txt  AG-5430-0cm-SAGE-27-04-2021.IEC  Ba113IEC.IEC  background.Spe  convert_Spe_ASCII.sh
example_file/list_format/: binary_reader.py  tbmd1_1k_2k.Spe
maths_exploration/: anomaly_visualizer.py  discontinuity_detection.py  full_pmf.py  kernel_calculator.py  markov_chain.py  negative_log_likelihood.py  peakiness_manipulation.py  variance_asymptote.py
peakfinding/: __init__.py  anomaly_detection.py  curvature_detection.py  discontinuity_detection.py  fitter.py  full_pmf.py  markov_chain.py  negative_log_likelihood.py  poisson_distribution.py  spectrum.py  sqrt_repr.py
user_scripts/: animate.py  merge_IEC.py  merge_Spe.py  plot_ChipIr.py  visualize.py
video/: .gitignore
