[tool.poetry]
name = "peakfinding"
version = "0.1.0"
description = "Finds peaks"
authors = ["OceanNuclear <annoyingamygdala@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
matplotlib = "^3.4.2"
scipy = "^1.6.3"
numpy = "^1.20.3"
pandas = "^1.2.4"
tqdm = "^4.61.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
